add obstacle avoidance operation_mode into original tello mode; Clean the waypoint mode.

--- a/config_tello.yaml
+++ b/config_tello.yaml
@@ -1,3 +1,28 @@
-mode: "single"  # or "waypoint"
-command_loop_delay: 0  # seconds between actions
-default_speed: 50  # default speed for Tello movements 
+# Tello Drone Configuration
+# This file controls the operational mode and behavior of the Tello drone system
+
+# Operational Mode Configuration
+# adaptive_mode: Original version with depth estimation and adaptive navigation
+# obstacle_mode: Enhanced version with obstacle detection and intensive keepalive
+# operational_mode: "adaptive_mode"  # Change to "obstacle_mode" for enhanced obstacle detection
+operational_mode: "obstacle_mode"
+
+# Processing Configuration
+command_loop_delay: 2  # Delay in seconds between processing cycles
+
+# Mode Descriptions:
+#
+# adaptive_mode:
+#   - Uses gemini-2.0-flash model
+#   - Advanced depth estimation with non-linear scaling
+#   - Standard frame recording at 3fps
+#   - Basic error handling
+#   - Optimized for precise navigation with depth awareness
+#
+# obstacle_mode:
+#   - Uses gemini-2.5-pro-preview-03-25 model
+#   - Enhanced obstacle detection with bounding boxes
+#   - Intensive keepalive system during API calls
+#   - Enhanced frame recording at 10fps
+#   - Advanced timeout protection and error recovery
+#   - Optimized for safe navigation with obstacle avoidance
