Support OpenAI compatible API

--- a/config_sim.yaml
+++ b/config_sim.yaml
@@ -1,3 +1,20 @@
-mode: "single"  # or "waypoint"
-command_loop_delay: 0  # seconds between actions
-monitor: 1  # monitor index to capture (1=primary monitor) 
+# API Provider Configuration
+# Choose between "gemini" or "openai" (OpenAI compatible API)
+api_provider: "gemini" # or "openai"
+
+# Model Configuration
+# Specify the exact model name to use
+# Leave empty to use default model for the provider
+model_name: "" # e.g., "gemini-2.5-pro", "google/gemini-2.5-pro", "openai/gpt-4.1"
+
+mode: "single" # or "waypoint"
+command_loop_delay: 0 # seconds between actions
+monitor: 1 # monitor index to capture (1=primary monitor)
+
+# API Provider Options:
+#
+# gemini:
+#   - Requires: GEMINI_API_KEY
+#
+# openai:
+#   - Requires: OPENAI_API_KEY, OPENAI_BASE_URL (defaults to OpenRouter)
