--- a/env.example
+++ b/env.example
@@ -1,1 +1,6 @@
-GEMINI_API_KEY=your_api_key_here
+# Gemini API Configuration
+GEMINI_API_KEY=your_gemini_api_key_here
+
+# OpenAI compatible API Configuration
+OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_BASE_URL=https://openrouter.ai/api/v1
