--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,9 @@ dependencies = [
     "python-dotenv>=1.1.1",
     "pyyaml>=6.0.2",
 ]
+
+[tool.uv]
+package = true
+
+[project.scripts]
+spf = "spf.main:main"
