--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,10 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "djitellopy>=2.5.0",
-    "google-generativeai>=0.8.5",
+    "google-genai>=1.35.0",
     "matplotlib>=3.10.6",
     "mss>=10.1.0",
-    "numpy>=2.3.2",
+    "numpy>=2.3.3",
     "openai>=1.107.0",
     "opencv-python>=4.11.0.86",
     "pillow>=11.3.0",
