Migrate tools folder into spf_tools module
Update docs

--- a/config_sim.yaml
+++ b/config_sim.yaml
@@ -7,7 +7,7 @@ api_provider: "gemini" # or "openai"
 # Model Configuration
 # Specify the exact model name to use
 # Leave empty to use default model for the provider
-model_name: "" # e.g., "gemini-2.5-pro", "google/gemini-2.5-pro", "openai/gpt-4.1"
+model_name: "" # e.g., "gemini-2.0-flash", "gemini-2.5-pro", "openai/gpt-4.1"
 
 # Navigation Mode
 adaptive_mode: true # Enable adaptive depth-based movement (true/false)
